# wordlebee

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
tests/: test_wordlebee.py
wordlebee/: __about__.py  __main__.py  filter_words.py
wordlebee/data/: words_filtered.txt
