[tool.poetry]
name = "wordlebee"
version = "0.3.0"
description = "wordle word guessing helper bee"
authors = ["Mrlento234 <lento.manickathan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
rich = "^11.0.0"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wordlebee = 'wordlebee.__main__:cli'
