[tool.poetry]
name = "wordlebee"
version = "0.7.3"
description = "wordle word guessing helper bee"
authors = ["Mrlento234 <lento.manickathan@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["wordle", "cli"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^11.2.0"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wordlebee = 'wordlebee.__main__:cli'

[tool.poetry.plugins."pipx.run"]
wordlebee = 'wordlebee.__main__:cli'
